# reversi

./: README.md
client/: Cargo.toml  package-lock.json  package.json
client/app/: page.tsx
client/components/GameBoard/: index.tsx
client/components/GameOverScreen/: index.tsx
client/components/LobbyScreen/: index.tsx
client/components/LoginScreen/: index.tsx
client/components/MatchSearchScreen/: index.tsx
client/services/: ws.ts
client/src/: game_logic.rs  lib.rs  main.rs  network.rs  state.rs  ui.rs
client/store/: gameStore.ts
client/utils/: gameLogic.ts
server/: Cargo.toml  README
server/src/: game.rs  lib.rs  main.rs  matchmaking.rs  message.rs  server.rs  session.rs
server/src/helpers/: logger.rs
server/src/presentation/routes/: mod.rs  ws_route.rs
